# badge

./: .gitignore  CMakeLists.txt  README.md  arm-none-eabi.cmake  palette.py
common/: CMakeLists.txt
common/include/: renderer.h
common/src/: renderer.c
desktop/: CMakeLists.txt
desktop/include/: desktop_main.h
desktop/src/: desktop_main.c  main.c
embedded/: CMakeLists.txt  pico_sdk_import.cmake
embedded/include/: badge_main.h  gc9a01.h
embedded/src/: badge_main.c  gc9a01.c  main.c
